# openctp

./: .gitignore  CTP接口扩展说明.md  LICENSE  readme.md
6.3.15_20190220/mac64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.3.15_20190220/mac_arm64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.3.19_P1_20200106/mac64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.3.19_P1_20200106/mac_arm64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.5.1_20200908/mac64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.5.1_20200908/mac_arm64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.6.1_P1_20210406/mac64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.6.1_P1_20210406/mac_arm64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.6.7_20220304/mac64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.6.7_20220304/mac_arm64/: thostmduserapi_se.dylib  thosttraderapi_se.dylib
6.6.9_20220920/mac64/: thostmduserapi_se.dylib
6.6.9_20220920/mac_arm64/: thosttraderapi_se.dylib
6.7.2_20230913/: README.md
CTPOPT-CTPAPI/: readme.md
EMT-CTPAPI/: dict.csv  readme.md
QQ-CTPAPI/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h
SINA-CTPAPI/: CMakeLists.txt
TORA-CTPAPI/: readme.md
TORA_OPT-CTPAPI/: readme.md
TTS-CTPOPT/: README.md
ctp2EMT/: CMakeLists.txt  FtdcMdApiImpl.h  FtdcTraderApiImpl.h
ctp2EMT/6.3.15_20190220/: CMakeLists.txt
ctp2EMT/6.5.1_20200908/: CMakeLists.txt  ThostFtdcTraderApi.h
ctp2EMT/6.6.7_20220304/: CMakeLists.txt
ctp2EMT/6.6.9_20220920/: CMakeLists.txt
ctp2EMT/EMT/: emt_api_data_type.h  emt_quote_struct.h  emt_trader_api.h
ctp2EMT东方财富/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  FtdcTraderApiImpl.h  readme.md
ctp2EMT东方财富/6.3.19_P1_20200106/: CMakeLists.txt
ctp2EMT东方财富/6.5.1_20200908/: error.xml
ctp2EMT东方财富/6.6.1_P1_20210406/: CMakeLists.txt  ThostFtdcTraderApi.h  error.xml
ctp2EMT东方财富/6.6.7_20220304/: ThostFtdcUserApiStruct.h
ctp2EMT东方财富/EMT/: emt_quote_api.h  eoms_api_fund_struct.h
ctp2IB/: readme.md
ctp2OST东方证券/: readme.md
ctp2QDP/: readme.md
ctp2QQ/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  readme.md
ctp2QQ/6.5.1_20200908/: CMakeLists.txt  ThostFtdcUserApiStruct.h
ctp2QQ/6.6.1_P1_20210406/: CMakeLists.txt
ctp2QQ/6.6.7_20220304/: CMakeLists.txt
ctp2QQ/6.6.9_20220920/: CMakeLists.txt  error.xml
ctp2QQ/6.7.0_20230209/: CMakeLists.txt  error.xml
ctp2QQ/6.7.2_20230913/: CMakeLists.txt  error.xml
ctp2QQ行情/: FtdcMdApiImpl.cpp  readme.md
ctp2QQ行情/6.3.19_P1_20200106/: CMakeLists.txt
ctp2QQ行情/6.6.1_P1_20210406/: CMakeLists.txt
ctp2STP/: CMakeLists.txt  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  readme.md
ctp2STP/6.3.15_20190220/: CMakeLists.txt
ctp2STP/6.3.19_P1_20200106/: CMakeLists.txt  error.xml
ctp2STP/6.5.1_20200908/: CMakeLists.txt
ctp2STP/6.6.7_20220304/: ThostFtdcTraderApi.h
ctp2STP/TORA/: TORATstpTraderApi.h
ctp2STPOPT/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  FtdcTraderApiImpl.h  readme.md
ctp2STPOPT/TORA/: TORATstpSPTraderApi.h  TORATstpSPUserApiDataType.h  TORATstpSPUserApiStruct.h
ctp2Sina/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  readme.md
ctp2Sina/6.3.15_20190220/: CMakeLists.txt
ctp2Sina/6.3.19_P1_20200106/: CMakeLists.txt
ctp2Sina/6.5.1_20200908/: CMakeLists.txt  ThostFtdcUserApiDataType.h
ctp2Sina/6.6.7_20220304/: ThostFtdcMdApi.h  ThostFtdcUserApiDataType.h
ctp2Sina/6.7.0_20230209/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp2Sina/6.7.1_20230613/: CMakeLists.txt  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
ctp2Sina/6.7.2_20230913/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp2Sina行情/: CMakeLists.txt  readme.md
ctp2Sina行情/6.6.7_20220304/: CMakeLists.txt
ctp2TAP/: readme.md
ctp2TTS/: readme.md
ctp2TTS/6.7.0_20230209/: README.md
ctp2XTP/: FtdcMdApiImpl.cpp  FtdcTraderApiImpl.h  algo_data_type.h
ctp2XTP/6.3.15_20190220/: CMakeLists.txt
ctp2XTP/6.3.19_P1_20200106/: CMakeLists.txt
ctp2XTP/6.6.1_P1_20210406/: CMakeLists.txt  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp2XTP/XTP/: xtp_trader_api.h
ctp2YD/: readme.md
ctp2中泰证券XTP/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.cpp  algo_api_struct.h  libxtpquoteapi.dylib  readme.md  xoms_api_struct.h  xquote_api_rebuild_tbt_struct.h  xquote_api_struct.h  xtp_api_data_type.h  xtp_quote_api.h  xtp_trader_api.h
ctp2中泰证券XTP/6.5.1_20200908/: CMakeLists.txt
ctp2中泰证券XTP/6.5.1_20200908/win64/: xtpquoteapi.lib  xtptraderapi.lib
ctp2中泰证券XTP/6.6.7_20220304/: CMakeLists.txt
ctp2中泰证券XTP/6.6.9_20220920/: CMakeLists.txt
ctp2中泰证券XTP/XTP/: xquote_api_struct.h  xtp_api_struct.h  xtp_quote_api.h
ctp2华鑫证券STP/: FtdcMdApiImpl.cpp  FtdcMdApiImpl.h  FtdcTraderApiImpl.h  TORATstpUserApiDataType.h  TORATstpXMdApi.h  TORATstpXMdApiStruct.h  readme.md  xfastmdapi.lib
ctpapi-c/: readme.md
ctpapi-csharp/: readme.md
ctpapi-go/: readme.md
ctpapi-java/: readme.md
ctpapi-opt-python/: readme.md  soptthostmduserapi.i  soptthosttraderapi.i
ctpapi-opt-python/CTPOPT/: CMakeLists.txt
ctpapi-opt-python/CTPOPT/linux/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h
ctpapi-opt-python/CTPOPT/win64/: ThostFtdcUserApiStruct.h  soptthostmduserapi_se.lib  soptthosttraderapi_se.lib
ctpapi-opt-python/demo/: md_demo.py  (+1 more)
ctpapi-python/: readme.md  thostmduserapi.i  thosttraderapi.i
ctpapi-python/CTPAPI/: CMakeLists.txt
ctpapi-rust/: readme.md
ctpopt-python/: readme.md
demo/: README.md  settlement_parser.py
demo/print/atpprint/: CMakeLists.txt  atpprint.cpp
demo/print/atpprint/ATP/include/: err_code.xml
demo/print/atpprint/ATP/include/trade/: atp_trade_client.h  atp_trade_constants.h  atp_trade_handler.h  atp_trade_msg.h  atp_trade_types.h
demo/print/ufxprint/: CMakeLists.txt  Makefile  readme.md  t2sdk.ini  ufxprint.cpp
demo/print/ufxprint/UFX/: analyStr.cpp  analyStr.h  data_def.h  readme.md  t2sdk_interface.h  tool.cpp  tool.h
docs/: 6.3.15_API接口说明.chm  6.5.1_API接口说明.chm  CTP FIX接口使用规范说明.docx  CTP FIX网关说明.docx  CTP_FIX_1.2.2.docx  个股API接口说明-v3.6.2.chm
tools/: README.md
widgets/: README.md
(+348 files in other folders)
