cmake_minimum_required(VERSION 2.8)

project(openctp_ctpopt)

set(CMAKE_CXX_STANDARD 11)

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if(CMAKE_GENERATOR_PLATFORM STREQUAL "x86")
        include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/win32 $ENV{BOOST_INCLUDE} $ENV{PYTHON_INCLUDE})
        link_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/win32 $ENV{BOOST_LIB} $ENV{PYTHON_LIB})
    else()
        include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/win64 $ENV{BOOST_INCLUDE} $ENV{PYTHON_INCLUDE})
        link_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/win64 $ENV{BOOST_LIB} $ENV{PYTHON_LIB})
    endif()
    add_compile_options(/bigobj /MT)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/linux $ENV{PYTHON_INCLUDE})
    link_directories(${PROJECT_SOURCE_DIR} $ENV{PYTHON_LIB})
endif()

set(tdapi _soptthosttraderapi)
set(mdapi _soptthostmduserapi)

message("generate swig wrap files ...")
if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if(CMAKE_GENERATOR_PLATFORM STREQUAL "x86")
        execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/win32 ${PROJECT_SOURCE_DIR}/../soptthosttraderapi.i)
        execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/win32 ${PROJECT_SOURCE_DIR}/../soptthostmduserapi.i)
    else()
        execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/win64 ${PROJECT_SOURCE_DIR}/../soptthosttraderapi.i)
        execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/win64 ${PROJECT_SOURCE_DIR}/../soptthostmduserapi.i)
    endif()
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/linux ${PROJECT_SOURCE_DIR}/../soptthosttraderapi.i)
    execute_process(COMMAND swig -threads -c++ -python -outdir . -outcurrentdir -I${PROJECT_SOURCE_DIR}/linux ${PROJECT_SOURCE_DIR}/../soptthostmduserapi.i)
endif()

add_library(${tdapi} SHARED soptthosttraderapi_wrap.cxx)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set_target_properties(${tdapi} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    set_target_properties(${tdapi} PROPERTIES LINK_FLAGS "-Wl,-Bsymbolic")
    set_property(TARGET ${tdapi} PROPERTY IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/linux/soptthosttraderapi_se.so)
    set_target_properties(${tdapi} PROPERTIES PREFIX "")
    target_link_libraries(${tdapi} soptthosttraderapi_se.so -lboost_locale -lboost_system)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set_target_properties(${tdapi} PROPERTIES SUFFIX ".pyd")
    target_link_libraries(${tdapi} soptthosttraderapi_se.lib)
endif()

add_library(${mdapi} SHARED soptthostmduserapi_wrap.cxx)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set_target_properties(${mdapi} PROPERTIES POSITION_INDEPENDENT_CODE ON)
    set_target_properties(${mdapi} PROPERTIES LINK_FLAGS "-Wl,-Bsymbolic")
    set_property(TARGET ${mdapi} PROPERTY IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/linux/soptthostmduserapi_se.so)
    set_target_properties(${mdapi} PROPERTIES PREFIX "")
    target_link_libraries(${mdapi} soptthostmduserapi_se.so -lboost_locale -lboost_system)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set_target_properties(${mdapi} PROPERTIES SUFFIX ".pyd")
    target_link_libraries(${mdapi} soptthostmduserapi_se.lib)
endif()
